[project]
name = "federatednode"
version = "1.2.0"
description = ""
authors = [
    {name = "r-casula",email = "riccardo.casula@aridhia.com"}
]
maintainers = [
    {name = "r-casula",email = "riccardo.casula@aridhia.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "flask",
    "sqlalchemy",
    "psycopg2",
    "alembic",
    "kubernetes",
    "flask-sqlalchemy",
    "joserfc>=1.3.5",
    "pyjwt>=2.10.1",
    "waitress>=3.0.1",
    "flask-swagger-ui",
    "pymssql",
    "werkzeug>=3.1.5",
    "jinja2>=3.1.5",
    "requests>=2.32.4",
    "cryptography>=46.0.5",
    "urllib3>=2.6.3",
    "pydantic>=2.12.5",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.3",
    "pytest",
    "pytest-env",
    "pytest-mock",
    "python-dotenv",
    "pytest-cov",
    "responses",
    "pytest-responses",
    "sqlalchemy-utils"
]
